addedpics/fixed spacing in background image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,21 +14,21 @@
 }
 /* nav bar style */
 nav {
-  background-color: #0d47a1;
+  background-color: #424242;
 
-  color: #e3f2fd;
+  color: #f5f5f5;
 }
 
 .hero-body {
-  background-color: #1565c0;
+  background-color: #616161;
   opacity: 0.9;
 }
 /* drop-down-container positioning */
 
 /* button style */
 button {
-  background-color: #1976d2;
-  color: #e3f2fd;
+  background-color: #616161;
+  color: #f5f5f5;
   border-radius: 12px;
   font-size: 17px;
   padding: 10px 25px;
